hphp/test/zend/good/ext/zlib/tests/bug61287.php.skipif
<?hh extension_loaded("zlib") or die("SKIP need zlib");