hphp/test/zend/bad/ext/dom/tests/bug65196.php.skipif
<?php
extension_loaded("dom") or die("skip need ext/dom");
?>